--- a/.github/workflows/build-resume.yml
+++ b/.github/workflows/build-resume.yml
@@ -39,6 +39,7 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "chore: update resume PDF"
+            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
             git push
           fi
         env:
