--- a/.github/workflows/build-resume.yml
+++ b/.github/workflows/build-resume.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           mkdir -p pdf
           rm -f pdf/*.pdf
-          mv resume.pdf "pdf/Ankush Kapoor Resume.pdf"
+          mv resume.pdf "pdf/ankush-kapoor-resume.pdf"
         
       - name: Convert PDF to PNG and add to img/ dir
         run: |
@@ -29,16 +29,15 @@ jobs:
           sudo apt install -y poppler-utils
           mkdir -p img
           rm -f img/*.png
-          pdftoppm -rx 300 -ry 300 "pdf/Ankush Kapoor Resume.pdf" img/resume -png
-          mv "img/resume-1.png" "img/Ankush Kapoor Resume.png"
+          pdftoppm -rx 300 -ry 300 "pdf/ankush-kapoor-resume.pdf" img/resume -png
+          mv "img/resume-1.png" "img/ankush-kapoor-resume.png"
           
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add pdf/
-          git add img/
+          git add -A
 
           if git diff --cached --quiet; then
             echo "No changes to commit."
