--- a/.github/workflows/build-resume.yml
+++ b/.github/workflows/build-resume.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    outputs:
+      deployed: ${{ steps.push_check.outputs.deployed }}
 
     steps:
       - name: Checkout repository
@@ -45,6 +47,15 @@ jobs:
             git commit -m "chore: update Resume PDF and PNG files"
             git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
             git push
+            echo "deployed=true" >> $GITHUB_OUTPUT
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  vercel_deploy:
+    needs: build_latex
+    if: needs.build_latex.outputs.deployed == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Vercel Deployment
+        run: curl -X POST "${{ secrets.VERCEL_DEPLOY_HOOK }}"
